--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div class="panel-group"id="painel-sobre">
 <div class="panel panel-default">
 <div class="panel-heading" data-parent="#painel-sobre" data-toggle="collapse" data-target="#p1">
-<h3 class="panel-title"  > Desde 1693</h3>
+<h3 class="panel-title"  > teste doraci entendeu troquei agora para isto </h3>
 </div>
 
 <div id="p1"class="collapse">
